# autoware.universe

./: '  .gitignore  collision_table.xlsx  diagnostic_publisher.py  rss_collision_calculator.py  stopping_distance_calculator.py
.github/workflows/: github-release.yaml  sync-awf-latest.yaml  sync-upstream.yaml
common/autoware_ad_api_msgs/: CMakeLists.txt
common/autoware_ad_api_msgs/system/msg/: MRMStatus.msg
common/autoware_ad_api_msgs/system/srv/: MRMOperation.srv
common/autoware_auto_perception_rviz_plugin/: package.xml
common/interpolation/: CMakeLists.txt
common/motion_utils/: CMakeLists.txt
common/rtc_manager_rviz_plugin/src/: rtc_manager_panel.cpp
common/signal_processing/: CMakeLists.txt  main_filter.cpp
common/signal_processing/src/: lowpass_filter.cpp
common/tier4_calibration_rviz_plugin/: package.xml
common/tier4_feature_manager_rviz_plugin/: CMakeLists.txt  README.md  package.xml
control/autonomous_emergency_braking/: README.md
control/autoware_autonomous_emergency_braking/: README.md  package.xml
control/autoware_control_validator/: package.xml
control/autoware_mpc_lateral_controller/: CMakeLists.txt
control/autoware_smart_mpc_trajectory_follower/: proxima_controller.md
control/autoware_vehicle_adaptor/: README.md  build_actuation_map_2d_test.py  build_nominal_ilqr.py  build_test.py  requirements.txt  setup.py
control/mpc_lateral_controller/: CMakeLists.txt
control/system_identification/: CMakeLists.txt  package.xml
control/system_identification/include/: sysid_core.hpp  sysid_node.hpp
control/system_identification/include/input_library/: input_lib.hpp  prbs_tap_bits.hpp
control/system_identification/launch/: sysid.launch.xml  sysid_launch.xml
control/system_identification/msg/: SysIDSteeringVars.idl
control/system_identification/param/: system_identification.param.yaml
control/system_identification/plot/: plots.xml
control/system_identification/src/: sysid_core.cpp  sysid_node.cpp
control/system_identification/src/input_library/: input_lib.cpp  prbs_tap_bits.cpp
control/vehicle_cmd_gate/: package.xml
evaluator/: dlr_planning_control.yaml
evaluator/autoware_control_evaluator/: package.xml
evaluator/autoware_planning_evaluator/: package.xml
experiment/unit_step_steer/: CMakeLists.txt  package.xml
experiment/unit_step_steer/src/: step_unit_pub.cpp
jari_rosbag_replayer/: README.md  compare_result.py  config_sample.json  jari_cutin_analyzer.py  jari_rosbag_replayer.py  package.xml  plot_timing_diffs.py  setup.cfg  setup.py
launch/tier4_autoware_api_launch/: package.xml
launch/tier4_localization_launch/: package.xml
launch/tier4_perception_launch/: package.xml
launch/tier4_planning_launch/: package.xml
launch/tier4_simulator_launch/: package.xml
localization/initial_pose_button_panel/: package.xml
localization/localization_error_monitor/: package.xml
localization/ndt_scan_matcher/: package.xml
perception/detected_object_validation/: CMakeLists.txt  package.xml  pointcloud_intensity_based_validator.md
perception/euclidean_cluster/: package.xml
perception/ground_segmentation/: package.xml
perception/image_projection_based_fusion/: package.xml
perception/lidar_centerpoint/: CMakeLists.txt
perception/multi_object_tracker/: package.xml
perception/traffic_light_visualization/: README.md
planning/auto_parking_planner/: CMakeLists.txt  README.md  package.xml
planning/auto_parking_planner/include/: auto_parking_planner.hpp  circular_graph.hpp
planning/auto_parking_planner/osmmap/: office2f_rescaled.osm
planning/auto_parking_planner/src/: auto_parking_planner.cpp  circular_route_planning.cpp  parking_route_planner.cpp  parking_route_planning.cpp  plan_circular_route.cpp  preparation.cpp  preparking_route_planning.cpp  utils.cpp
planning/auto_parking_planner/test/src/: test_circular_graph.cpp
planning/autoware_obstacle_cruise_planner/: package.xml
planning/autoware_parking_srvs/: CMakeLists.txt  package.xml
planning/autoware_path_selector/: CMakeLists.txt  package.xml
planning/autoware_planning_data_analyzer/: CMakeLists.txt  package.xml
planning/behavior_path_planner/: CMakeLists.txt  package.xml
planning/behavior_velocity_intersection_module/: package.xml
planning/behavior_velocity_planner/: package.xml
planning/freespace_planner/: package.xml
planning/freespace_planning_algorithms/: CMakeLists.txt
planning/mission_planner/: CMakeLists.txt  package.xml
planning/obstacle_avoidance_planner/: CMakeLists.txt  README.md
planning/obstacle_cruise_planner/: CMakeLists.txt
sensing/pointcloud_preprocessor/: CMakeLists.txt  package.xml
simulator/dummy_perception_publisher/: CMakeLists.txt  package.xml
simulator/fault_injection/: package.xml
simulator/simple_planning_simulator/: package.xml
simulator/vcu_planning_simulator/: CMakeLists.txt  package.xml
simulator/vcu_planning_simulator/config/: simulator_model.param.yaml
simulator/vcu_planning_simulator/include/vcu_planning_simulator/: vcu_planning_simulator_core.hpp  visibility_control.hpp
simulator/vcu_planning_simulator/include/vcu_planning_simulator/vehicle_model/: sim_model.hpp  sim_model_delay_steer_vel.hpp  sim_model_ideal_steer_vel.hpp  sim_model_interface.hpp
simulator/vcu_planning_simulator/launch/: vcu_planning_simulator.launch.py
simulator/vcu_planning_simulator/param/: vcu_planning_simulator_default.param.yaml
simulator/vcu_planning_simulator/src/vcu_planning_simulator/: vcu_planning_simulator_core.cpp
simulator/vcu_planning_simulator/src/vcu_planning_simulator/vehicle_model/: sim_model_delay_steer_vel.cpp  sim_model_ideal_steer_vel.cpp  sim_model_interface.cpp
simulator/vcu_planning_simulator/test/: test_vcu_planning_simulator.cpp
system/diagnostic_graph_aggregator/: CMakeLists.txt
system/remapper/: package.xml
system/system_error_monitor/: package.xml
vehicle/autoware_accel_brake_map_calibrator/: CMakeLists.txt
vehicle/autoware_external_cmd_converter/: package.xml
vehicle/autoware_raw_vehicle_cmd_converter/: CMakeLists.txt  package.xml
(+801 files in other folders)
