<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_parking_planner</name>
  <version>0.1.0</version>
  <description>The auto_parking_planner package</description>
  <maintainer email="hoge@hoge.jp">Hoge Hoge</maintainer>
  <license>Apache License 2.0</license>
  <author email="h-ishida@jsk.imi.i.u-tokyo.ac.jp">Hirokazu Ishida</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_parking_srvs</depend>
  <depend>freespace_planning_algorithms</depend>
  <depend>geometry_msgs</depend>
  <depend>interpolation</depend>
  <depend>lanelet2_extension</depend>
  <depend>mission_planner</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_autoware_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
